# emergency_datahack

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  model.ckpt  mypy.ini  pyproject.toml  tox.ini
images/Aqueduct_river_basins_LENA/: Aqueduct_river_basins_LENA.dbf  Aqueduct_river_basins_LENA.shp  Aqueduct_river_basins_LENA.shx
notebooks/: Untitled.ipynb  Untitled1.ipynb  Untitled2-Copy1.ipynb  Untitled2.ipynb  emerhack_eda.ipynb  emerhack_eda2.ipynb  emerhack_trans_2_score0209.ipynb  inference.ipynb  prepare_data.ipynb  train.ipynb
original/: data_check.ipynb  present_tracks.ipynb
original/track_1/: hydro_1day_sample.csv  meteo_1day_sample.csv  meteo_1month_sample.csv  meteo_3hours_sample.csv  test_sample.csv  train_sample.csv
src/: __init__.py  data.py  data_loading.py  features.py  inference.py  lena_dataset.py  lenatrans2.py  make_df_example.py  make_features_df.py  make_features_df_extra.py  models.py  search.py  search_bi_trans.py  system.py  torch_f1_loss.py  train.py  train_bi_trans.py  train_extra.py
src/configs/: __init__.py  inference.py  model.py  search.py  search_extra.py  train.py  train_extra.py
src/utils/: data.py  torch.py
