[tool.poetry]
name = "emergency_hack"
version = "0.1.0"
description = ""
authors = ["Gleb <gleberof@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
sklearn = "^0.0"
pandas = "^1.2.4"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
scipy = "^1.6.3"
torch = "^1.8.1"
lightgbm = "^3.2.1"
catboost = "^0.25.1"
xgboost = "^1.4.2"
basemap = {url = "https://github.com/matplotlib/basemap/archive/master.zip"}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
mypy = "^0.812"
flake8 = "^3.9.2"
isort = "^5.8.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
